build/resources/test/LO-2/InvalidPrograms/test_27.lo
// *Bad testcase*
// Extra braces

int main()
{
    int a;
    {
      a = 5;
      return foo(a);
    }
}

{
}
int foo(int a)
{
  int b;
  {
   b = ((((a+10)-10)*5)/5);
   return b;
  }
}